--- a/views/index.html
+++ b/views/index.html
@@ -4,13 +4,15 @@
 <head>
   <meta charset="utf8">
   <title>pacman</title>
+  <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet/less" type="text/css" href="/less/app.less">
+  <link rel="stylesheet/less" type="text/css" href="/less/reset.css">
+  <link rel="stylesheet/less" type="text/css" href="/less/app.css">
 
 </head>
 
 <body >
-  <div class="col-xs-12 col-sm-10 col-sm-offset-1">
+<!--   <div class="col-xs-12 col-sm-10 col-sm-offset-1">
   <div>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
@@ -34,17 +36,67 @@
           </ul>
         </div>
       </div>
-    </div>
+    </div> -->
 
-
-
-
-      <div class="board" ng-repeat="cell in maze.cells">
-        <div id ="{{$index}}" class="{{cell.name}}">{{cell.name}}</div>
+    <header>
+      <article id="header-container">
+        <div id="logo-container">
+          <article id="logo">
+            <img src="/images/hacman_logo_cropped.png"/>
+          </article>
         </div>
-
-
-
+        <article id="ghost-banner-left">
+          <img src="/images/left_ghosts_banner.png"/>
+        </article>
+        <article id="ghost-banner-right">
+          <img src="/images/right_ghosts_banner.png"/>
+        </article>
+      </article>
+    </header>
+    <main>
+    <section id="board-container">
+      <article class="board" ng-repeat="cell in maze.cells">
+        <div id ="{{$index}}" class="{{cell.name}}"></div>
+        </article>
+    </section>
+    <section id="board-section">
+      <section id="player-score-container">
+        <article id="player-score">
+          <h1 id="player-name">ENTER YOUR NAME</h1>
+          <input type="text" name="player-name" id="player-name-form">
+          <input type="submit" value="ok man" id="player-name-button">
+          <article id="current-score">
+            <p><span id="life-count">3</span> LIVES</p>
+            <p><span id="point-count">0</span> POINTS</p>
+            </article>
+          </article>
+        </article>
+      </section>
+      <section id="score-container">
+        <article id="score-board">
+          <h1>SCORE BOARD</h1>
+            <article class="score-board-list">
+              <ul>
+                <li> <h2>Player</h2></li>
+                <li>Denise</li>
+                <li>Snozza</li>
+                <li>Pablo</li>
+                <li>Sandrine</li>
+              </ul>
+            </article>
+            <article class="score-board-list" id="stars">
+              <ul>
+                <li> <h2>Score</h2></li>
+                <li>★★★★★</li>
+                <li>★★★★★</li>
+                <li>★★★★★</li>
+                <li>★★★★★</li>
+              </ul>
+            </article>
+        </article>
+      </section>
+    </section>
+    </main>
 
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
@@ -54,6 +106,8 @@
   <script src="/js/controllers.js"></script>
   <script src="/js/filters.js"></script>
   <script src="/js/directives.js"></script>
+  <script src="/js/jquery-2.1.1.min.js"></script>
+  <script src="/js/interface.js"></script>
 </body>
 
 </html>
