--- a/views/index.html
+++ b/views/index.html
@@ -11,33 +11,7 @@
 
 </head>
 
-<body >
-<!--   <div class="col-xs-12 col-sm-10 col-sm-offset-1">
-  <div>
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Pacman game</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a>
-            </li>
-            <li><a href="#game">Game</a>
-            </li>
-            <li><a href="#highscore">High score</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div> -->
-
+<body>
     <header>
       <article id="header-container">
         <div id="logo-container">
@@ -67,7 +41,7 @@
           <input type="submit" value="ok man" id="player-name-button">
           <article id="current-score">
             <p><span id="life-count">3</span> LIVES</p>
-            <p><span id="point-count">0</span> POINTS</p>
+            <p><span id="point-count">{{pacman.pointCount}}</span> POINTS</p>
             </article>
           </article>
         </article>
@@ -97,7 +71,6 @@
       </section>
     </section>
     </main>
-
   <script src="/bower_components/angular/angular.js"></script>
   <script src="/bower_components/angular-route/angular-route.js"></script>
   <script src="/bower_components/less/dist/less-1.6.1.js"></script>
@@ -108,6 +81,32 @@
   <script src="/js/directives.js"></script>
   <script src="/js/jquery-2.1.1.min.js"></script>
   <script src="/js/interface.js"></script>
+
+  <script>
+
+    $(document).on('keyup', function(e){
+      var direction = e.keyCode
+      if(direction == '38') { $('.pacman').css('transform', 'rotate(270deg)') }
+      if(direction == '40') { $('.pacman').css('transform', 'rotate(90deg)') }
+      if(direction == '37') { $('.pacman').css('transform', 'rotate(180deg)') }
+      if(direction == '39') { $('.pacman').css('transform', 'rotate(0deg)') }
+    });
+
+    // function(keyEvent){
+    //   var direction = keyEvent.keyIdentifier
+    //   console.log('this is owrking')
+    // if(direction == 'Up') (newLocation = self.location - 30)
+    // if(direction == 'Down') (newLocation = self.location + 30)
+    // if(direction == 'Left') (newLocation = self.location - 1)
+    // if(direction == 'Right') ($(this).css('background', ('/images/pacman_up.gif') no-repeat center center))
+
+      // $(this).css('background', '/images/pacman_right.gif')
+      // $(this).css('background', '/images/pacman_left.gif')
+      // $(this).css('background', '/images/pacman_up.gif')
+      // $(this).css('background', '/images/pacman_down.gif')
+
+    </script>
+
 </body>
 
 </html>
