--- a/public/less/app.css
+++ b/public/less/app.css
@@ -147,13 +147,16 @@ body {
   margin-left: 12px;
   height: 260px;
   width: 560px;
-  border: 3px yellow dotted;
+  border: 4px yellow dotted;
+}
+
+#player-name-input {
 }
 
 #player-name-form{
   height: 40px;
-  width: 200px;
-  margin-bottom: 2em;
+  width: 300px;
+  margin-top: 2em;
 }
 #current-score{
   font-size: 30px;
@@ -184,7 +187,7 @@ body {
   margin-left: 12px;
   height: 510px;
   width: 560px;
-  border: 3px yellow dotted;
+  border: 4px yellow dotted;
 }
 
 #score-board h1{
@@ -212,5 +215,6 @@ body {
   color: #FFD700
 }
 
-
-
+#pacman-living {
+  visibility: hidden;
+}
